--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+*~
 # C extensions
 *.so
 
@@ -16,6 +16,7 @@ eggs/
 .eggs/
 lib/
 lib64/
+media/
 parts/
 sdist/
 var/
@@ -50,7 +51,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
-
+*local.py
 # Translations
 *.mo
 *.pot
